syntax = "proto3";

message Product {
  int32 product_id = 1;
  string product_name = 2;
  float weight = 3;
  int32 quantity = 4;
  // Additional product information fields can be added here
}

message ProductionLineInfo {
  int32 line_id = 1;
  repeated Product products = 2;
  // Additional production line information fields can be added here
}
