syntax = "proto3";

message TemperatureData {
  int64 id = 1;
  int32 sensor_id = 2;
  float temperature_celsius = 3;
  int64 timestamp = 4;
  // Additional sensor data fields can be added here
}
